Add support for Hibernate's hibernate.hbm2ddl.extra_physical_table_types