@@ -3,12 +3,11 @@ package io.quarkus.deployment.pkg.steps;
 import static io.quarkus.deployment.pkg.steps.LinuxIDUtil.getLinuxID;
 
 import java.io.File;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.function.Function;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.apache.commons.lang3.RandomStringUtils;
@@ -24,16 +23,13 @@ import io.quarkus.deployment.pkg.builditem.NativeImageRunnerBuildItem;
 import io.quarkus.deployment.pkg.builditem.UpxCompressedBuildItem;
 import io.quarkus.deployment.util.ContainerRuntimeUtil;
 import io.quarkus.deployment.util.FileUtil;
-import io.quarkus.deployment.util.ProcessUtil;
+import io.smallrye.common.process.AbnormalExitException;
+import io.smallrye.common.process.ProcessBuilder;
+import io.smallrye.common.process.ProcessUtil;
 
 public class UpxCompressionBuildStep {
 
     private static final Logger log = Logger.getLogger(UpxCompressionBuildStep.class);
-
-    /**
-     * The name of the environment variable containing the system path.
-     */
-    private static final String PATH = "PATH";
 
     @BuildStep(onlyIf = NativeBuild.class)
     public void compress(NativeConfig nativeConfig, NativeImageRunnerBuildItem nativeImageRunner,
@@ -80,38 +76,25 @@ public class UpxCompressionBuildStep {
     }
 
     private boolean runUpxFromHost(File upx, File executable, NativeConfig nativeConfig) {
-        List<String> extraArgs = nativeConfig.compression().additionalArgs().orElse(Collections.emptyList());
-        List<String> args = Stream.of(
-                Stream.of(upx.getAbsolutePath()),
-                nativeConfig.compression().level().stream().mapToObj(this::getCompressionLevel),
-                extraArgs.stream(),
-                Stream.of(executable.getAbsolutePath()))
-                .flatMap(Function.identity())
-                .collect(Collectors.toList());
+        List<String> extraArgs = nativeConfig.compression().additionalArgs().orElse(List.of());
+        List<String> args = Stream.concat(
+                Stream.concat(
+                        nativeConfig.compression().level().stream().mapToObj(this::getCompressionLevel),
+                        extraArgs.stream()),
+                Stream.of(executable.getAbsolutePath())).toList();
         log.infof("Executing %s", String.join(" ", args));
-        final ProcessBuilder processBuilder = new ProcessBuilder(args)
-                .directory(executable.getAbsoluteFile().getParentFile())
-                .redirectOutput(ProcessBuilder.Redirect.PIPE)
-                .redirectError(ProcessBuilder.Redirect.PIPE);
-        Process process = null;
         try {
-            process = processBuilder.start();
-            ProcessUtil.streamOutputToSysOut(process);
-            final int exitCode = process.waitFor();
-            if (exitCode != 0) {
-                log.error("Command: " + String.join(" ", args) + " failed with exit code " + exitCode);
-                return false;
-            }
-            return true;
+            ProcessBuilder.newBuilder(upx.getAbsolutePath())
+                    .arguments(args)
+                    .directory(executable.getAbsoluteFile().getParentFile().toPath())
+                    .output().consumeLinesWith(8192, System.out::println)
+                    .error().consumeLinesWith(8192, System.err::println)
+                    .run();
         } catch (Exception e) {
-            log.error("Command: " + String.join(" ", args) + " failed", e);
+            log.errorf(e, "Command %s failed", String.join(" ", args));
             return false;
-        } finally {
-            if (process != null) {
-                process.destroy();
-            }
         }
-
+        return true;
     }
 
     private boolean runUpxInContainer(NativeImageBuildItem nativeImage, NativeConfig nativeConfig,
@@ -159,33 +142,22 @@ public class UpxCompressionBuildStep {
         commandLine.add(nativeImage.getPath().toFile().getName());
 
         log.infof("Compress native executable using: %s", String.join(" ", commandLine));
-        final ProcessBuilder processBuilder = new ProcessBuilder(commandLine)
-                .redirectOutput(ProcessBuilder.Redirect.PIPE)
-                .redirectError(ProcessBuilder.Redirect.PIPE);
-        Process process = null;
         try {
-            process = processBuilder.start();
-            ProcessUtil.streamOutputToSysOut(process);
-            final int exitCode = process.waitFor();
-            if (exitCode != 0) {
-                if (exitCode == 127) {
-                    log.errorf("Command: %s failed because the builder image does not provide the `upx` executable",
-                            String.join(" ", commandLine));
-                } else {
-                    log.errorf("Command: %s failed with exit code %d", String.join(" ", commandLine), exitCode);
-                }
-                return false;
-            }
+            ProcessBuilder.newBuilder(commandLine.get(0))
+                    .arguments(commandLine.subList(1, commandLine.size()))
+                    .output().consumeLinesWith(8192, System.out::println)
+                    .error().consumeLinesWith(8192, System.err::println)
+                    .run();
             return true;
         } catch (Exception e) {
-            log.error("Command: " + String.join(" ", commandLine) + " failed", e);
-            return false;
-        } finally {
-            if (process != null) {
-                process.destroy();
+            if (e instanceof AbnormalExitException ae && ae.exitCode() == 127) {
+                log.errorf("Command: %s failed because the builder image does not provide the `upx` executable",
+                        String.join(" ", commandLine));
+            } else {
+                log.errorf(e, "Command: %s failed", String.join(" ", commandLine));
             }
+            return false;
         }
-
     }
 
     private String getCompressionLevel(int level) {
@@ -199,21 +171,8 @@ public class UpxCompressionBuildStep {
     }
 
     private Optional<File> getUpxFromSystem() {
-        String exec = getUpxExecutableName();
-        String systemPath = System.getenv(PATH);
-        if (systemPath != null) {
-            String[] pathDirs = systemPath.split(File.pathSeparator);
-            for (String pathDir : pathDirs) {
-                File dir = new File(pathDir);
-                if (dir.isDirectory()) {
-                    File file = new File(dir, exec);
-                    if (file.exists()) {
-                        return Optional.of(file);
-                    }
-                }
-            }
-        }
-        return Optional.empty();
+        return ProcessUtil.pathOfCommand(Path.of(getUpxExecutableName()))
+                .map(Path::toFile);
     }
 
     private static String getUpxExecutableName() {
